# arc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  arc-design-v4-final.md  pyproject.toml
.design/: arc-builder.md  design.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: changelog.md
docs/docs/getting-started/: installation.md  quickstart.md
docs/docs/guides/: agents.md  cron-scheduling.md  discord.md  migration.md  model-routing.md  tui.md
docs/docs/overview/: architecture.md  concepts.md  introduction.md
docs/docs/reference/: agent-schema.md  cli.md  config-schema.md  cron-schema.md  troubleshooting.md
scripts/: arc-daemon.service  install.sh
src/arc/: __main__.py  agents.py  cli.py  config.py  cron.py  daemon.py  discord_bridge.py  dispatcher.py  import_openclaw.py  ipc.py  setup_wizard.py  types.py  utils.py
src/arc/tui/: app.py
src/arc/tui/screens/: agents.py  config.py  cron.py  logs.py  status.py  tokens.py
src/arc/tui/widgets/: vim_list.py
tests/: conftest.py  test_agents.py  test_cli_phase6.py  test_cli_status.py  test_cli_tokens.py  test_config.py  test_cron.py  test_daemon.py  test_discord_bridge.py  test_dispatcher.py  test_import_openclaw.py  test_ipc.py  test_setup.py
tests/test_tui/: test_tui_app.py  test_tui_functional.py
